# osm-overpass-rs

./: Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml  rustfmt.toml  todo.md
doc/: setbuilder.md
scripts/: dev.sh  release.sh
src/: builder.rs  lib.rs  math.rs  osm.rs  overpass.rs  query.rs
src/builder/: common.rs  difference.rs  filter.rs  output.rs  query.rs  recurse.rs  union.rs
src/math/: bbox.rs  point.rs
src/osm/: de.rs  element.rs  node.rs  object.rs  relation.rs  way.rs
src/overpass/: count.rs  result.rs  server.rs
src/query/: bbox.rs  difference.rs  filter.rs  namer.rs  output.rs  overpass.rs  overpassql.rs  query.rs  recurse.rs  recurse_filter.rs  recurse_set.rs  set.rs  tag.rs  union.rs  util.rs
