[package]
name = "overpass-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Steven Vergenz"]
description = "Easily create and execute Overpass API queries of OpenStreetMap. Supports both declarative and builder syntax for generating OverpassQL strings, a reqwest-based submission API, and type definitions for handling the query results."
repository = "https://github.com/stevenvergenz/osm-overpass-rs"
categories = ["science::geo", "api-bindings"]
keywords = ["openstreetmap", "osm"]

[dependencies]
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros"] }

[build-dependencies]
cargo-readme = "3.3.1"
